Fix superfooter alignment

--- a/assets/styles/templates/footer.scss
+++ b/assets/styles/templates/footer.scss
@@ -85,6 +85,7 @@ footer {
     position: relative;
     margin-bottom: var(--outer-spacing-md);
     gap: var(--inner-spacing-lg) 0;
+    width: 100%;
 
     ul.menu {
       display: flex;
@@ -166,7 +167,7 @@ footer {
 
     .superfooter {
       &.grid {
-        margin: var(--outer-spacing-md) 0;
+        margin: var(--outer-spacing-md) auto;
       }
 
       ul.menu {
